# time

./: README.md  README_zh.md  bundle.json  time.gni
framework/cj/: BUILD.gn
framework/cj/include/: system_date_time.h  system_date_time_ffi.h  utils.h
framework/cj/src/: system_date_time.cpp  system_date_time_ffi.cpp
framework/js/ani/: BUILD.gn
framework/js/ani/ets/: @ohos.systemDateTime.ets
framework/js/ani/src/: system_date_time_ani.cpp
framework/js/napi/common/include/: napi_utils.h  napi_work.h
framework/js/napi/common/src/: napi_utils.cpp  napi_work.cpp
framework/js/napi/system_date_time/: BUILD.gn
framework/js/napi/system_date_time/include/: date_time_init.h  napi_system_date_time.h
framework/js/napi/system_date_time/src/: date_time_init.cpp  napi_system_date_time.cpp
framework/js/napi/system_time/: BUILD.gn
framework/js/napi/system_time/src/: js_systemtime.cpp
framework/js/napi/system_timer/: BUILD.gn
framework/js/napi/system_timer/include/: napi_system_timer.h  timer_init.h  timer_type.h
framework/js/napi/system_timer/src/: napi_system_timer.cpp  timer_init.cpp  timer_type.cpp
framework/js/taihe/common/include/: ani_utils.h
framework/js/taihe/common/src/: ani_utils.cpp
framework/js/taihe/system_datetime/: BUILD.gn
framework/js/taihe/system_datetime/idl/: ohos.time_service.systemDateTime.taihe
framework/js/taihe/system_datetime/src/: ani_constructor.cpp  ohos.time_service.systemDateTime.impl.cpp
framework/js/taihe/system_timer/: BUILD.gn
framework/js/taihe/system_timer/idl/: ohos.time_service.systemtimer.taihe
framework/js/taihe/system_timer/include/: ani_system_timer.h
framework/js/taihe/system_timer/src/: ani_constructor.cpp  ani_system_timer.cpp  ohos.time_service.systemtimer.impl.cpp
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: itimer_info.h  time_service_client.h  visibility.h
interfaces/inner_api/src/: time_service_client.cpp
interfaces/kits/c/: BUILD.gn
interfaces/kits/c/include/: time_service.h
interfaces/kits/c/src/: time_service.c
services/: BUILD.gn  ITimeService.idl  ITimerCallback.idl  time_permission.cpp  time_permission.h  time_system_ability.cpp  time_system_ability.h
services/dfx/include/: time_cmd_dispatcher.h  time_cmd_parse.h  time_sysevent.h
services/dfx/src/: time_cmd_dispatcher.cpp  time_cmd_parse.cpp  time_sysevent.cpp
services/etc/: BUILD.gn  time.para  time.para.dac
services/etc/init/: BUILD.gn  timeservice.cfg  timeservice.rc
services/profile/: 3702.json  BUILD.gn
services/time/include/: event_manager.h  ntp_trusted_time.h  ntp_update_time.h  simple_timer_info.h  sntp_client.h  time_service_notify.h  time_tick_notify.h  time_zone_info.h
services/time/include/inner_api_include/: timer_call_back.h
services/time/src/: event_manager.cpp  itimer_info.cpp  ntp_trusted_time.cpp  ntp_update_time.cpp  simple_timer_info.cpp  sntp_client.cpp  time_service_notify.cpp  time_tick_notify.cpp  time_zone_info.cpp  timer_call_back.cpp
services/timer/include/: batch.h  cjson_helper.h  timer_database.h  timer_handler.h  timer_info.h  timer_manager.h  timer_manager_interface.h  timer_proxy.h
services/timer/src/: batch.cpp  cjson_helper.cpp  timer_database.cpp  timer_handler.cpp  timer_info.cpp  timer_manager.cpp  timer_proxy.cpp
utils/: BUILD.gn
utils/native/include/: time_common.h  time_file_utils.h  time_hilog.h  time_xcollie.h
utils/native/src/: time_common.cpp  time_file_utils.cpp  time_xcollie.cpp
