# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../time.gni")

ohos_shared_library("cj_system_date_time_ffi") {
  defines = []
  include_dirs = [
    "include/",
    "../../interfaces/inner_api/include",
    "../../utils/native/include",
  ]

  if (!build_ohos_sdk) {
    sources = [
      "src/system_date_time.cpp",
      "src/system_date_time_ffi.cpp",
    ]
    deps = [ "${api_path}:time_client" ]
    external_deps = [
      "ability_runtime:abilitykit_native",
      "ability_runtime:wantagent_innerkits",
      "c_utils:utils",
      "hilog:libhilog",
      "init:libbegetutil",
      "ipc:ipc_single",
      "napi:cj_bind_ffi",
      "samgr:samgr_proxy",
    ]
  } else {
    defines += [ "PREVIEWER" ]
    sources = [ "src/system_date_mock.cpp" ]
    external_deps = [ "napi:cj_bind_ffi" ]
  }

  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = time_sanitize_debug
  }
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "time"
  part_name = "time_service"
}
