# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("../../../time.gni")

ohos_shared_library("systemdatetime_ani") {
  sources = [ "src/system_date_time_ani.cpp" ]
  deps = [ "${api_path}:time_client" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "runtime_core:ani",
    "samgr:samgr_proxy",
    "ipc:ipc_single",
  ]

  sanitize = {
    boundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "time"
  part_name = "time_service"
  output_extension = "so"
}

generate_static_abc("systemdatetime_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.systemDateTime.ets" ]
  dst_file = "$target_out_dir/systemdatetime.abc"
  out_puts = [ "$target_out_dir/systemdatetime.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/systemdatetime.abc"
}

ohos_prebuilt_etc("systemdatetime_abc_etc") {
  source = "$target_out_dir/systemdatetime.abc"
  module_install_dir = "framework"
  subsystem_name = "time"
  part_name = "time_service"
  deps = [ ":systemdatetime_abc" ]
}

group("systemdatetime_ani_package") {
  deps = [
    ":systemdatetime_abc_etc",
    ":systemdatetime_ani",
  ]
}
