# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../time.gni")

ohos_shared_library("systemtime") {
  include_dirs = [
    "../../../interfaces/inner_api/include",
    "include",
    "../common/include",
  ]

  configs = [ "${time_utils_path}:utils_config" ]
  cflags = [
    "-fPIC",
    "-g3",
  ]
  cflags_cc = [
    "-fvisibility=hidden",
    "-ffunction-sections",
    "-fdata-sections",
    "-Os",
  ]

  sources = [
    "../common/src/napi_utils.cpp",
    "src/js_systemtime.cpp",
  ]

  deps = [ "${api_path}:time_client" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = time_sanitize_debug
  }
  relative_install_dir = "module"
  subsystem_name = "time"
  part_name = "time_service"
}
