# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../time.gni")

cflags = []
cflags_cc = [
  "-fvisibility=hidden",
  "-ffunction-sections",
  "-fdata-sections",
  "-Os",
]

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"SYSTEMTIMER_STANDARD\"",
    "LOG_DOMAIN = xxxx",
  ]
}

ohos_shared_library("systemtimer") {
  include_dirs = [
    "../common/include",
    "include",
  ]

  configs = [ ":native_module_config" ]

  sources = [
    "../common/src/napi_utils.cpp",
    "../common/src/napi_work.cpp",
    "src/napi_system_timer.cpp",
    "src/timer_init.cpp",
    "src/timer_type.cpp",
  ]

  deps = [ "${api_path}:time_client" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = time_sanitize_debug
  }
  relative_install_dir = "module"
  subsystem_name = "time"
  part_name = "time_service"
}
